<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_bg"
    android:orientation="vertical"
    tools:context=".modules.main.market.hangBuySell.HangBuyActivity">

    <include layout="@layout/title_project" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="22dp"
        android:paddingStart="22dp">

        <TextView
            android:id="@+id/average_price"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:gravity="center_vertical"
            android:text="@string/current_average_price"
            android:textColor="@color/zt_fff"
            android:textSize="@dimen/zt_14sp"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:gravity="center_vertical"
                android:text="@string/unit_price"
                android:textColor="@color/zt_fff"
                android:textSize="@dimen/zt_14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/order_price"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="4"
                android:background="@null"
                android:hint="@string/current_average_price_hint"
                android:inputType="numberDecimal"
                android:paddingStart="5dp"
                android:textColor="@color/zt_fff"
                android:textColorHint="@color/zt_et_hint"
                android:textSize="@dimen/zt_13sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:gravity="center_vertical"
                android:text="@string/count"
                android:textColor="@color/zt_fff"
                android:textSize="@dimen/zt_14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/order_count"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="4"
                android:background="@null"
                android:hint="@string/input_count_hint"
                android:inputType="number"
                android:paddingStart="5dp"
                android:textColor="@color/zt_fff"
                android:textColorHint="@color/zt_et_hint"
                android:textSize="@dimen/zt_13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text="UBI"
                android:textColor="@color/zt_fff"
                android:textSize="@dimen/zt_14sp"
                android:textStyle="bold"
                android:visibility="gone"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:gravity="center_vertical"
                android:text="@string/total_prices"
                android:textColor="@color/zt_fff"
                android:textSize="@dimen/zt_14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_vertical|right"
                android:textColor="@color/zt_fff"
                android:textSize="@dimen/zt_18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:background="@color/line" />

        <RelativeLayout
            android:id="@+id/hang_buy_rv"
            android:layout_width="match_parent"
            android:layout_height="63dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/TransactionDetails.beneficiary.address"
                android:textColor="@color/zt_fff"
                android:textSize="@dimen/zt_14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/order_receive_address"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:ellipsize="middle"
                android:gravity="end"
                android:singleLine="true"
                android:textColor="@color/zt_fff"
                android:textSize="@dimen/zt_14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:layout_alignParentBottom="true"
                android:background="@color/line" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <Button
                android:id="@+id/hang_affirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/create_wallet_enable_btn_bg_shape"
                android:text="@string/confirm_hang_sell"
                android:textColor="@color/white"
                android:textSize="@dimen/zt_16sp"
                android:textAllCaps="false"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>